add DeepAR, setting MainActivity, & main.dart

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
     <application
+        android:hardwareAccelerated="true"
+        android:screenOrientation="portrait"
+        android:requestLegacyExternalStorage="true"
+        android:usesCleartextTraffic="true"
         android:label="proto_hair"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
