--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   lucide_flutter: 0.548.0
   uuid: ^4.4.0
   intl: ^0.19.0
+  camera: ^0.11.1+1 
+  permission_handler: ^11.3.1
+  tflite_flutter: ^0.12.1
+  image: ^4.2.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +31,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/models/
