--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   tflite_flutter: ^0.12.1
   image: ^4.2.0
   path_provider: ^2.1.3
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
